[project]
name = "adam-kronos"
version = "0.1.0"
description = "Kronos financial K-line forecasting models."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "torch>=2.0.0",
    "einops==0.8.1",
    "huggingface_hub==0.33.1",
    "matplotlib>=3.9.3",
    "safetensors==0.6.2",
    "tqdm==4.67.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["model"]
